# hse-cv-project

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker_requirements.txt  pyproject.toml
.github/workflows/: ci.yml
tests/: test_no_error.py  test_regression.py
yolodemo/: demo.py  download_assets.py  freeze_graph_to_saved_model.py
yolodemo/core/: backbone.py  common.py  config.py  dataset.py  utils.py  yolov3.py
