[tool.poetry]
name = "hse-cv-project"
version = "0.1.0"
description = "Demo project with YoLoV3Nano inference on sample video file"
authors = ["nmakarov <zzirgrizz@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "2.2.0"
gdown = "4.7.3"
Pillow = "8.4.0"
opencv-contrib-python = "4.9.0.80"
opencv-python = "4.9.0.80"
easydict = "1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "yolodemo"

[tool.poetry.scripts]
yolov3 = 'yolodemo.demo:main'

[tool.poetry.dev-dependencies]
isort = "5.10.1"
black = "22.8.0"
flake8 = "5.0.4"
